# Haskell-Neural-Network

./: .gitignore  LICENSE  Main.hs  NeuralNetwork.cabal  mnist.prof  pyexample.py  test.prof  testMatrix.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.8/: NeuralNetwork-0.1.0.0-inplace.conf  package.cache
examples/MNIST/: mnist.hs
src/: ActivationFunctions.hs  Matrix.hs  NN.hs
